--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "dotenv": "^16.0.3",
+    "floating-vue": "^2.0.0-beta.20",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "vue-sticky-element": "^1.2.5",
+    "vue2-timeago": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
